SigmaCodebackup3rdSep/objects/Product_Batch_Management__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Product Batch Managements</relationshipLabel>
        <relationshipName>Product_Batch_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Batch Management</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Product Batch Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Batch Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>